my-apps/development/headlamp/patch-remove-session-ttl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headlamp
  namespace: kube-system
spec:
  template:
    spec:
      containers:
        - name: headlamp
          args:
            - -in-cluster
            - -in-cluster-context-name=main
            - -plugins-dir=/headlamp/plugins
